--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <h2>Sacrament Planner</h2>
             <h3>CS124: Intro to Software Development</h3>
             <div class="site-plan">
-                <a href="https://blackadder-git.github.io/byui/c++/sudoku/structure_chart.pdf">Structure Chart</a>
+                <a href="">Source</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/c++/sudoku/index.html"><img src="screenshots/planner.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
+                <a href="https://blackadder-git.github.io/byui/csharp/planner/index.html"><img src="screenshots/planner.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
             </div>
             <div class="features">
                 <span class="csharp feature">C#</span>
