--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
             <h3>CS124: Intro to Software Development</h3>
             <div class="site-plan">
                 <a href="https://blackadder-git.github.io/byui/c++/sudoku/structure_chart.pdf">Structure Chart</a>
+                | 
+                <a href="https://github.com/blackadder-git/byui/c++/sudoku/sudoku_gold.cpp">Source</a>
             </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/c++/sudoku/index.html"><img src="screenshots/sudoku.png" alt="Screenshot of c++ sudoku solver screen created for intro to programming"></a>
