--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 
         <section>
             <h2>Sacrament Planner</h2>
-            <h3>CS124: Intro to Software Development</h3>
+            <h3>CS365: .NET Software Development</h3>
             <div class="site-plan">
-                <a href="">Source</a>
+                <a href="https://github.com/blackadder-git/byui/csharp/planner/">Source</a>
             </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/csharp/planner/index.html"><img src="screenshots/planner.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
@@ -150,21 +150,11 @@
                 <h2>Project Outcomes</h2>
                 <ul id="sudoku" class="hideContent">
                     <li>
-                        The objective of this project was to create a sudoku solver with a menu that would allow a user to select
-                        options to see the menu, display the board, edit a square, exit. In addition, extra credit was offered if the 
-                        program could solve the puzzle on its own. Once I had the game working, I looked into using backtracing to
-                        complete the game. While this would work, it took a while for the program to solve the board. 
-                    </li>
-                    <li>
-                        I decided to look into how a human being might approach a sudoku puzzle. I soon learned about techniques 
-                        such as <a href="https://sudoku.com/sudoku-rules/hidden-singles/">hidden singles</a>, <a href="https://sudoku.com/sudoku-rules/hidden-pairs/">hidden pairs</a>,
-                        and <a href="https://sudoku.com/sudoku-rules/pointing-pairs/">pointing pairs</a>. I implemented these search
-                        techniques into my program with a temporary board and found that the puzzles were solved much quicker.
+                        Sacrament planner with CRUD functionality. Users can select assign speakers for the meeting.
                     </li>
                 </ul>
             </div>
         </section>
-
         
         <section>
             <h2>Sudoku Solver</h2>
@@ -188,16 +178,13 @@
                 <h2>Project Outcomes</h2>
                 <ul id="sudoku" class="hideContent">
                     <li>
-                        The objective of this project was to create a sudoku solver with a menu that would allow a user to select
-                        options to see the menu, display the board, edit a square, exit. In addition, extra credit was offered if the 
-                        program could solve the puzzle on its own. Once I had the game working, I looked into using backtracing to
-                        complete the game. While this would work, it took a while for the program to solve the board. 
+                        This project solves sudoku puzzles. Menu options include: show, display board, edit square, exit.
                     </li>
                     <li>
-                        I decided to look into how a human being might approach a sudoku puzzle. I soon learned about techniques 
-                        such as <a href="https://sudoku.com/sudoku-rules/hidden-singles/">hidden singles</a>, <a href="https://sudoku.com/sudoku-rules/hidden-pairs/">hidden pairs</a>,
-                        and <a href="https://sudoku.com/sudoku-rules/pointing-pairs/">pointing pairs</a>. I implemented these search
-                        techniques into my program with a temporary board and found that the puzzles were solved much quicker.
+                        Rather than use backtracking, I wanted to take a more human approach to finding a solution. I researched various techniques:
+                        <a href="https://sudoku.com/sudoku-rules/hidden-singles/">hidden singles</a>, <a href="https://sudoku.com/sudoku-rules/hidden-pairs/">hidden pairs</a>,
+                        and <a href="https://sudoku.com/sudoku-rules/pointing-pairs/">pointing pairs</a>. And implemented them
+                        into the program using a temporary board.
                     </li>
                     <!--li>Not all Sudoku boards are created equal. Some are much more difficult to solve than others. You will get awarded points according to the level of difficulty of the board you are able to solve. The boards are:<br>
                         prjFinal85.txt<br>
@@ -243,7 +230,7 @@
             <div class="details">
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
-                    <li>The objective of this project was to style the content of a single web page using only CSS.</li>
+                    <li>Only CSS is used to style this fixed page of HTML.</li>
                     <li>This was a fun team assignment. We chose camping as our theme and divided up the work. In addition to 
                         using Trello and Slack, we met weekly. I implemented a moving star background, parallax effect as you scroll down the page,
                         moving firefly text and a campfire that was made entirely out of CSS animations. In addition, I learned to use SASS.
@@ -277,12 +264,12 @@
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
                     <li>
-                        This project had specific requirements to build a JavaScript app that could add 
-                        items to a list, remove them, mark them as complete, and also filter them for the user. 
+                        This project is built with JavaScript. It allows adding
+                        items to a list, removing them, marking them as complete, and also has filtering. 
                     </li>
                     <li>
                         As with other projects, I used the console to debug my app during development. Having learned
-                        to use the localstorage object, I can now think of many projects that would benefit from being able to 
+                        to use the localstorage object, I can think of many projects that would benefit from being able to 
                         save information between sessions.
                     </li>
 
@@ -327,10 +314,10 @@
                 <h2>Project Outcomes</h2>
                 <ul id="commerce" class="hideContent">
                     <li>
-                        The objective of this project was to create a fictitious site for a local chamber of commerce. In addition to meeting 
-                        industry standards, the site needed to implement wayfinding, multiple forms, follow PARC principles (proximity, alignment,
-                        repetition, contrast), and use a REST api to collect weather information. In addition, the css and js needed to be minimized
-                        and images optimized.
+                        This is a fictitious site for a local chamber of commerce. In addition to meeting 
+                        industry standards, the site implements wayfinding, has multiple forms, follows good design priciples PARC (proximity, alignment,
+                        repetition, contrast), and uses a REST api to collect weather information. In addition, the css and js are minimized
+                        and the images are optimized.
                     </li>
                     <li>
                         In addition to building the site, I had fun collecting the images which are local to where I live.
@@ -380,7 +367,7 @@
                 <h2>Project Outcomes</h2>
                 <ul id="weather" class="hideContent">
                     <li>
-                        The objective of this project was to create a responsive site with pages for individual cities. Current weather conditions
+                        This is a responsive site with pages for individual cities. Current weather conditions
                         are pulled using a 3rd party api. An announcement is displayed depending on the day.
                     </li>
                     <li>
@@ -422,8 +409,7 @@
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
                     <li>
-                        The objective of this project was to create a responsive site with at least three pages. One of the pages needed to 
-                        include a form. 
+                        This responsive three page site includes a form. 
                     </li>
                     <li>
                         Using public images and content, I constructed a site around stories and their hyphothesized meaning
@@ -466,8 +452,7 @@
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
                     <li>
-                        The objective of this site was to create a site with main page and a child page. While the layout was given to us, we
-                        needed to come up with the color scheme and typography.
+                        This two page site includes uses a custom color scheme and typography.
                     </li>
                     <li>
                         As part of the development process, I used a number of tools to validate my work. These included the W3C Markup Validation
