--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
         .dotnet {
             background-color: #27e524;
         }
+        .mvc {
+            background-color: #27e524;
+        }
+        .inheritance, .encapsulation, .abstraction, .polymorphism {
+            background-color: #27e524;
+        }
         .site-plan {
             margin: 1em 0;
         }
@@ -145,6 +151,8 @@
             <div class="features">
                 <span class="csharp feature">C#</span>
                 <span class="dotnet feature">.NET</span>
+                <span class="mvc feature">MVC</span>
+                <span class="inheritance feature">Inheritance</span>
             </div>
             <div class="details">
                 <h2>Project Outcomes</h2>
