--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="site-plan">
                 <a href="https://blackadder-git.github.io/byui/c++/sudoku/structure_chart.pdf">Structure Chart</a>
                 | 
-                <a href="https://github.com/blackadder-git/byui/c++/sudoku/sudoku_gold.cpp">Source</a>
+                <a href="https://github.com/blackadder-git/byui/c++/sudoku/sudoku_gold.txt">Source</a>
             </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/c++/sudoku/index.html"><img src="screenshots/sudoku.png" alt="Screenshot of c++ sudoku solver screen created for intro to programming"></a>
@@ -186,7 +186,7 @@
                 <h2>Project Outcomes</h2>
                 <ul id="sudoku" class="hideContent">
                     <li>
-                        This project solves sudoku puzzles. Menu options include: show, display board, edit square, exit.
+                        Sudoku puzzle solver. Menu options include: show, display board, edit square, exit.
                     </li>
                     <li>
                         Rather than use backtracking, I wanted to take a more human approach to finding a solution. I researched various techniques:
@@ -238,7 +238,7 @@
             <div class="details">
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
-                    <li>Only CSS is used to style this fixed page of HTML.</li>
+                    <li>Single page, CSS only.</li>
                     <li>This was a fun team assignment. We chose camping as our theme and divided up the work. In addition to 
                         using Trello and Slack, we met weekly. I implemented a moving star background, parallax effect as you scroll down the page,
                         moving firefly text and a campfire that was made entirely out of CSS animations. In addition, I learned to use SASS.
@@ -272,8 +272,7 @@
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
                     <li>
-                        This project is built with JavaScript. It allows adding
-                        items to a list, removing them, marking them as complete, and also has filtering. 
+                        JavaScript app allows adding items to a list, removing them, marking them as complete. Also includes filtering. 
                     </li>
                     <li>
                         As with other projects, I used the console to debug my app during development. Having learned
@@ -322,7 +321,7 @@
                 <h2>Project Outcomes</h2>
                 <ul id="commerce" class="hideContent">
                     <li>
-                        This is a fictitious site for a local chamber of commerce. In addition to meeting 
+                        Fictitious site for a local chamber of commerce. In addition to meeting 
                         industry standards, the site implements wayfinding, has multiple forms, follows good design priciples PARC (proximity, alignment,
                         repetition, contrast), and uses a REST api to collect weather information. In addition, the css and js are minimized
                         and the images are optimized.
@@ -375,7 +374,7 @@
                 <h2>Project Outcomes</h2>
                 <ul id="weather" class="hideContent">
                     <li>
-                        This is a responsive site with pages for individual cities. Current weather conditions
+                        Responsive site with pages for individual cities. Current weather conditions
                         are pulled using a 3rd party api. An announcement is displayed depending on the day.
                     </li>
                     <li>
@@ -417,7 +416,7 @@
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
                     <li>
-                        This responsive three page site includes a form. 
+                        Responsive three page site includes a form. 
                     </li>
                     <li>
                         Using public images and content, I constructed a site around stories and their hyphothesized meaning
@@ -460,7 +459,7 @@
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
                     <li>
-                        This two page site includes uses a custom color scheme and typography.
+                        Responsive two page site includes custom color scheme and typography.
                     </li>
                     <li>
                         As part of the development process, I used a number of tools to validate my work. These included the W3C Markup Validation
