--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JC - Projects Portfolio</title>
+    <title>JC - Project Portfolio</title>
     <meta name="description" content="A collection of some of my projects">
     <!--link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png"-->
@@ -135,7 +135,7 @@
     </style>
 </head>
 <body>
-    <h1>JC - Projects Portfolio</h1>
+    <h1>JC - Project Portfolio</h1>
 
     <main id="projects">
 
