--- a/index.html
+++ b/index.html
@@ -140,13 +140,92 @@
     <main id="projects">
 
         <section>
+            <h2>Cookie Jar</h2>
+            <h3>CS310: Applied Programming</h3>
+            <div class="site-plan">
+                <a href="https://github.com/blackadder-git/CookieJar">Source</a>
+            </div>
+            <div class="screenshot">
+                <a href="https://github.com/blackadder-git/CookieJar"><img src="screenshots/planner.png" alt="Screenshot of Cookie Jar built with Kotlin"></a>
+            </div>
+            <div class="features">
+                <span class="kotlin feature">Kotlin</span>
+                <span class="oop feature">OOP</span>
+                <span class="gc feature">Google Cloud</span>
+                <span class="firebase feature">Firebase</span>
+                <span class="inheritance feature">Inheritance</span>
+            </div>
+            <div class="details">
+                <h2>Project Outcomes</h2>
+                <ul id="cookiejar" class="hideContent">
+                    <li>
+                        Organizes and lists inspirational thoughts by topic. Two numbers indicate the total number of each thought and the number of thoughts already looked at.
+                    </li>
+                    <li>
+                        When clicked, category displays a random thought with options to mark as favorite, delete or close. Another screen allows the user to submit new thoughts.
+                    </li>
+                    <li>
+                        Main screen reads data from a Firebase Realtime Database. When a user views a thought, the database is updated. If the user clicks delete the record is removed from the cloud. If the user submits data from the add new screen, a new record is created
+                    </li>
+                </ul>
+            </div>
+        </section>
+        
+        <section>
+            <h2>Haunted</h2>
+            <h3>CS310: Applied Programming</h3>
+            <div class="site-plan">
+                <a href="https://github.com/blackadder-git/Haunted">Source</a>
+            </div>
+            <div class="screenshot">
+                <a href="https://github.com/blackadder-git/Haunted"><img src="screenshots/planner.png" alt="Screenshot of Haunted Adventure built with Kotlin"></a>
+            </div>
+            <div class="features">
+                <span class="kotlin feature">Kotlin</span>
+                <span class="oop feature">OOP</span>
+                <span class="inheritance feature">Inheritance</span>
+            </div>
+            <div class="details">
+                <h2>Project Outcomes</h2>
+                <ul id="haunted" class="hideContent">
+                    <li>
+                        Once opened, this app has a welcome screen that explains the game. As the sole inheritor of your uncle's fortune, you must find the key hidden deep within the haunted house. Choose where to explore.
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <h2>Lemonade Stand</h2>
+            <h3>CS310: Applied Programming</h3>
+            <div class="site-plan">
+                <a href="https://github.com/blackadder-git/Lemonade">Source</a>
+            </div>
+            <div class="screenshot">
+                <a href="https://github.com/blackadder-git/Lemonade"><img src="screenshots/planner.png" alt="Screenshot of Lemonade Stand built with Kotlin"></a>
+            </div>
+            <div class="features">
+                <span class="kotlin feature">Kotlin</span>
+                <span class="oop feature">OOP</span>
+            </div>
+            <div class="details">
+                <h2>Project Outcomes</h2>
+                <ul id="lemonade" class="hideContent">
+                    <li>
+                        Once opened, this app has a welcome screen that explains the game. As the sole inheritor of your uncle's fortune, you must find the key hidden deep within the haunted house. Choose where to explore.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        
+        <section>
             <h2>Sacrament Planner</h2>
             <h3>CS365: .NET Software Development</h3>
             <div class="site-plan">
-                <a href="https://blackadder-git.github.io/byui/csharp/planner/">Source</a>
+                <a href="">Source</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/csharp/planner/index.html"><img src="screenshots/planner.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
+                <a href=""><img src="screenshots/planner.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
             </div>
             <div class="features">
                 <span class="csharp feature">C#</span>
