--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         .dotnet {
             background-color: #27e524;
         }
-        .mvc {
+        .kotlin, .java {
+            background-color: #27e524;
+        }
+        .mvc, .opp {
             background-color: #27e524;
         }
         .inheritance, .encapsulation, .abstraction, .polymorphism {
