--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
         .kotlin, .java {
             background-color: #27e524;
         }
-        .mvc, .opp {
+        .firebase, .gc {
+            background-color: #27e524;
+        }
+        .mvc, .oop {
             background-color: #27e524;
         }
         .inheritance, .encapsulation, .abstraction, .polymorphism {
