--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <a href="https://github.com/blackadder-git/Haunted">Source</a>
             </div>
             <div class="screenshot">
-                <a href="https://github.com/blackadder-git/Haunted"><img src="screenshots/planner.png" alt="Screenshot of Haunted Adventure built with Kotlin"></a>
+                <a href="https://github.com/blackadder-git/Haunted"><img src="screenshots/house600.png" alt="Screenshot of Haunted Adventure built with Kotlin"></a>
             </div>
             <div class="features">
                 <span class="kotlin feature">Kotlin</span>
